Test for LED0 and trying to debug timer0

--- a/QMSat.cbp
+++ b/QMSat.cbp
@@ -39,6 +39,7 @@
 			<Add directory="Include/Application" />
 			<Add directory="Tests/Steps/Peripherals" />
 			<Add directory="Include/EFM32" />
+			<Add directory="Tests/Steps/Mocks" />
 		</Compiler>
 		<ExtraCommands>
 			<Add before="TestGeneration.bat" />
@@ -65,6 +66,7 @@
 		<Unit filename="Include/Application/RunState.hpp" />
 		<Unit filename="Include/Application/StateManager.hpp" />
 		<Unit filename="Include/EFM32/EFM32_Timer0.hpp" />
+		<Unit filename="Include/Interface/IGPIO.hpp" />
 		<Unit filename="Include/Interface/ILED.hpp" />
 		<Unit filename="Include/Interface/IState.hpp" />
 		<Unit filename="Include/Interface/ITimer.hpp" />
@@ -73,7 +75,7 @@
 		<Unit filename="Source/Application/RunState.cpp" />
 		<Unit filename="Source/Application/StateManager.cpp" />
 		<Unit filename="Source/Peripherals/LED.cpp" />
-		<Unit filename="Tests/Steps/Luis.h" />
+		<Unit filename="Tests/Steps/Mocks/GPIO-mock.hpp" />
 		<Unit filename="Tests/Steps/Peripherals/LED-evaluator.cpp" />
 		<Unit filename="Tests/Steps/Peripherals/LED-evaluator.hpp" />
 		<Unit filename="Tests/Test.h" />
