--- a/QMSat.cbp
+++ b/QMSat.cbp
@@ -84,6 +84,7 @@
 		<Unit filename="Source/Peripherals/LED.cpp" />
 		<Unit filename="Tests/Steps/Mocks/GPIO-mock.cpp" />
 		<Unit filename="Tests/Steps/Mocks/GPIO-mock.hpp" />
+		<Unit filename="Tests/Steps/Mocks/GPIO-struct-mock.hpp" />
 		<Unit filename="Tests/Steps/Peripherals/GPIO-evaluator.cpp" />
 		<Unit filename="Tests/Steps/Peripherals/GPIO-evaluator.hpp" />
 		<Unit filename="Tests/Steps/Peripherals/LED-evaluator.cpp" />
